--- a/chemistry.html
+++ b/chemistry.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mathematics Topics</title>
+    <title>रसायन विज्ञान के टॉपिक्स</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <h1>Mathematics Topics</h1>
+    <h1>रसायन विज्ञान के टॉपिक्स</h1>
     <div id="topics-container">
         <!-- Topics will be dynamically added by JavaScript -->
     </div>
