--- a/index.html
+++ b/index.html
@@ -3,63 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Topics</title>
+    <title>Company Dashboard</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f3f4f6;
             margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        .navbar {
+            background-color: #343a40;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
             padding: 20px;
         }
-        h1 {
+        .button-card {
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
             text-align: center;
-            color: #4a4a4a;
-            margin-bottom: 30px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        li {
-            margin: 15px 0;
-        }
-        .button {
-            padding: 15px 30px;
-            background: linear-gradient(45deg, #6a11cb, #2575fc);
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            border: none;
-            border-radius: 25px;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-            text-decoration: none;
-            display: inline-block;
         }
-        .button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        .button-card img {
+            width: 60px;
+            height: 60px;
+            margin-bottom: 10px;
+        }
+        .button-card h3 {
+            margin: 10px 0;
+            font-size: 18px;
+            color: #333;
+        }
+        .button-card p {
+            font-size: 14px;
+            color: #777;
+        }
+        .button-card:hover {
+            background-color: #f0f0f0;
         }
     </style>
     <script>
         function navigateToPage(page) {
-            // Redirect to the selected page
             window.location.href = page;
         }
     </script>
 </head>
 <body>
-    <h1>Study Topics</h1>
-    <ul>
-        <li><button class="button" onclick="navigateToPage('mathematics.html')">Topic 1: Mathematics</button></li>
-        <li><button class="button" onclick="navigateToPage('physics.html')">Topic 2: Physics</button></li>
-        <li><button class="button" onclick="navigateToPage('chemistry.html')">Topic 3: Chemistry</button></li>
-        <li><button class="button" onclick="navigateToPage('biology.html')">Topic 4: Biology</button></li>
-        <li><button class="button" onclick="navigateToPage('computer_science.html')">Topic 5: Computer Science</button></li>
-    </ul>
+    <div class="navbar">Company Name</div>
+    <div class="container">
+        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 1">
+            <h3>Current Affairs</h3>
+            <p>समसामयिकी</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('geography.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 2">
+            <h3>Geography</h3>
+            <p>भूगोल</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('history.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 3">
+            <h3>History</h3>
+            <p>इतिहास</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('political.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 4">
+            <h3>Political</h3>
+            <p>राजनीति</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('mathematics.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 5">
+            <h3>Mathematics</h3>
+            <p>गणित</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('physics.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 6">
+            <h3>Physics</h3>
+            <p>भौतिकी</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('chemistry.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 7">
+            <h3>Chemistry</h3>
+            <p>रसायन शास्त्र</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('biology.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 8">
+            <h3>Biology</h3>
+            <p>जीवविज्ञान</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('computer_science.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 9">
+            <h3>Computer Science</h3>
+            <p>कंप्यूटर विज्ञान</p>
+        </div>
+    </div>
 </body>
 </html>
