--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@
             <h3>Current Affairs</h3>
             <p>समसामयिकी</p>
         </div>
+        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 1">
+            <h3>Current Affairs</h3>
+            <p>समसामयिकी</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 1">
+            <h3>Current Affairs</h3>
+            <p>समसामयिकी</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 1">
+            <h3>Current Affairs</h3>
+            <p>समसामयिकी</p>
+        </div>
+        
+        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
+            <img src="https://via.placeholder.com/60" alt="Icon 1">
+            <h3>Current Affairs</h3>
+            <p>समसामयिकी</p>
+        </div>
         <div class="button-card" onclick="navigateToPage('geography.html')">
             <img src="https://via.placeholder.com/60" alt="Icon 2">
             <h3>Geography</h3>
