--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="container">
         <div class="button-card" onclick="navigateToPage('current_affairs.html')">
             <img src="https://via.placeholder.com/60" alt="Icon 1">
-            <h3>Current Affairs</h3>
-            <p>समसामयिकी</p>
+            <h3>Quize</h3>
+            <p>प्रश्नोत्तरी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('current_affairs.html')">
             <img src="https://via.placeholder.com/60" alt="Icon 1">
