--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         .container {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(2, 1fr); /* 2 buttons per row */
             gap: 20px;
             padding: 20px;
         }
@@ -59,73 +59,77 @@
     </script>
 </head>
 <body>
-    <div class="navbar">Company Name</div>
+    <div class="navbar">Company Dashboard</div>
     <div class="container">
-        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 10">
-            <h10>Quize</h10>
+        <div class="button-card" onclick="navigateToPage('quiz.html')">
+            <img src="https://via.placeholder.com/60" alt="Quiz Icon">
+            <h3>Quiz</h3>
             <p>प्रश्नोत्तरी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('current_affairs.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 1">
-            <h3>Current Affairs</h3>
-            <p>समसामयिकी</p>
-        </div>
-        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 1">
-            <h3>Current Affairs</h3>
-            <p>समसामयिकी</p>
-        </div>
-        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 1">
-            <h3>Current Affairs</h3>
-            <p>समसामयिकी</p>
-        </div>
-        
-        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 1">
+            <img src="https://via.placeholder.com/60" alt="Current Affairs Icon">
             <h3>Current Affairs</h3>
             <p>समसामयिकी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('geography.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 2">
+            <img src="https://via.placeholder.com/60" alt="Geography Icon">
             <h3>Geography</h3>
             <p>भूगोल</p>
         </div>
         <div class="button-card" onclick="navigateToPage('history.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 3">
+            <img src="https://via.placeholder.com/60" alt="History Icon">
             <h3>History</h3>
             <p>इतिहास</p>
         </div>
         <div class="button-card" onclick="navigateToPage('political.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 4">
+            <img src="https://via.placeholder.com/60" alt="Political Icon">
             <h3>Political</h3>
             <p>राजनीति</p>
         </div>
         <div class="button-card" onclick="navigateToPage('mathematics.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 5">
+            <img src="https://via.placeholder.com/60" alt="Mathematics Icon">
             <h3>Mathematics</h3>
             <p>गणित</p>
         </div>
         <div class="button-card" onclick="navigateToPage('physics.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 6">
+            <img src="https://via.placeholder.com/60" alt="Physics Icon">
             <h3>Physics</h3>
             <p>भौतिकी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('chemistry.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 7">
+            <img src="https://via.placeholder.com/60" alt="Chemistry Icon">
             <h3>Chemistry</h3>
             <p>रसायन शास्त्र</p>
         </div>
         <div class="button-card" onclick="navigateToPage('biology.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 8">
+            <img src="https://via.placeholder.com/60" alt="Biology Icon">
             <h3>Biology</h3>
             <p>जीवविज्ञान</p>
         </div>
         <div class="button-card" onclick="navigateToPage('computer_science.html')">
-            <img src="https://via.placeholder.com/60" alt="Icon 9">
+            <img src="https://via.placeholder.com/60" alt="Computer Science Icon">
             <h3>Computer Science</h3>
             <p>कंप्यूटर विज्ञान</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('english.html')">
+            <img src="https://via.placeholder.com/60" alt="English Icon">
+            <h3>English</h3>
+            <p>अंग्रेजी</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('hindi.html')">
+            <img src="https://via.placeholder.com/60" alt="Hindi Icon">
+            <h3>Hindi</h3>
+            <p>हिंदी</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('general_knowledge.html')">
+            <img src="https://via.placeholder.com/60" alt="General Knowledge Icon">
+            <h3>General Knowledge</h3>
+            <p>सामान्य ज्ञान</p>
+        </div>
+        <div class="button-card" onclick="navigateToPage('reasoning.html')">
+            <img src="https://via.placeholder.com/60" alt="Reasoning Icon">
+            <h3>Reasoning</h3>
+            <p>तर्कशक्ति</p>
         </div>
     </div>
 </body>
