--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="navbar">Company Dashboard</div>
     <div class="container">
         <div class="button-card" onclick="navigateToPage('quiz.html')">
-            <img src="https://via.placeholder.com/60" alt="Quiz Icon">
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEgDT1ksOkN2Za9icRZ1GYGsqo-pgE52wwZiGDpe6jkAPsmvBM46jgtoGbwwIwiGIdaRrk_1fvTP0WPB67EoH4qWdsZxYAF4Xsvd7mhYsiNTyDhplyAhryqZBAImP6YtavBuHy-ZVWajACjveVUgwEOx-F1UeABw1vN5KWYR0ayF2zpb72pQgX4HmYX8W8Ew" alt="Quiz Icon">
             <h3>Quiz</h3>
             <p>प्रश्नोत्तरी</p>
         </div>
