--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>प्रश्नोत्तरी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('current_affairs.html')">
-            <img src="https://via.placeholder.com/60" alt="Current Affairs Icon">
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEgDT1ksOkN2Za9icRZ1GYGsqo-pgE52wwZiGDpe6jkAPsmvBM46jgtoGbwwIwiGIdaRrk_1fvTP0WPB67EoH4qWdsZxYAF4Xsvd7mhYsiNTyDhplyAhryqZBAImP6YtavBuHy-ZVWajACjveVUgwEOx-F1UeABw1vN5KWYR0ayF2zpb72pQgX4HmYX8W8Ew" alt="Current Affairs Icon">
             <h3>Current Affairs</h3>
             <p>समसामयिकी</p>
         </div>
