--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>समसामयिकी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('geography.html')">
-            <img src="https://via.placeholder.com/60" alt="Geography Icon">
+            <img src="   https://blogger.googleusercontent.com/img/a/AVvXsEgs6kPLhHYYvCnd0pfwXmOJsy9ohtxq129NK4vEryyFiXZX1dXyvbCptNzffb5fTew2VT4vgEqO8-GjIKQA-dnWev1udtlc8JiiYG2-nTJWDMobOV3D3HXY2HpWEogG5eUZPvUeiqGvj3sQUNVkkwGT0LpgGO3dqwjmFCMZ3rjZ1E1o-hs4hxrcLEJQamGG " alt="Geography Icon">
             <h3>Geography</h3>
             <p>भूगोल</p>
         </div>
