--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <p>भूगोल</p>
         </div>
         <div class="button-card" onclick="navigateToPage('history.html')">
-            <img src="https://via.placeholder.com/60" alt="History Icon">
-            <h3>History</h3>
-            <p>इतिहास</p>
+            <img src=" https://blogger.googleusercontent.com/img/a/AVvXsEizNFKm71DNKPuSpq7OAQnQtgrQddgE5Rtk95H9Kf-ISBzSMOEANkGkvQUZXv54AZ-WLvcNgUAAuzvvCzWnWSPWFB0GyFZYuz042bHLokOWb7U_N8nNqkYDhpq20TwTmtmlZjpQBNVuxB4jpoAYc949rLb_X1fcTqJtbgYGwoDx2xa0cRnrzA8K4qBPovmf" alt="History Icon">
+            <h3>Logic</h3>
+            <p>तर्क शक्ति</p>
         </div>
         <div class="button-card" onclick="navigateToPage('political.html')">
             <img src="https://via.placeholder.com/60" alt="Political Icon">
