--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <p>तर्क शक्ति</p>
         </div>
         <div class="button-card" onclick="navigateToPage('political.html')">
-            <img src="https://via.placeholder.com/60" alt="Political Icon">
-            <h3>Political</h3>
-            <p>राजनीति</p>
+            <img src="। https://blogger.googleusercontent.com/img/a/AVvXsEgHIpPeABy-bTBNzeStlYLkg5BFZnaw4An_CGl2iU2xf86z_n16ZrLdmI0nxM2a8445pedpRustyxy6smBXNYq0r1N_jOV6QjpzsoEv7FXd3ZP_7_1VdEznRTa81ZB5BTor_74h4--1MXghEsiBGGXFYNqHmWckXpZKF2Um1aWpnpzjUD9bte_I-EAZFFCL" alt="Political Icon">
+            <h3>Political And Constitution</h3>
+            <p>राजनीति ओर संविधान</p>
         </div>
         <div class="button-card" onclick="navigateToPage('mathematics.html')">
             <img src="https://via.placeholder.com/60" alt="Mathematics Icon">
