--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>राजनीति ओर संविधान</p>
         </div>
         <div class="button-card" onclick="navigateToPage('mathematics.html')">
-            <img src="https://via.placeholder.com/60" alt="Mathematics Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEiTRc8-fDrIoqsNgsQ-in8TarhhpAwlaWX57UIvccwc6DPlpZrm4ZQ82q0siMi2Z0jcH7YPJMeaR8J5AlH33J1ZXCppr371x8uvktOAd3tjhYywC2r6lFiLuSHuO5_QiQ-Xbps8DqbHxWKIi4g6rzdCUpq8G7YTitf2LU1MqmUj2YHCbsfu1fs5s96E82LO" alt="Mathematics Icon">
             <h3>Mathematics</h3>
             <p>गणित</p>
         </div>
