--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>गणित</p>
         </div>
         <div class="button-card" onclick="navigateToPage('physics.html')">
-            <img src="https://via.placeholder.com/60" alt="Physics Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEjTryk8ZVaOyu40lCe3VHaz3flkD60YhwPWSJEibs7cnYywrKmFm0q0WuQux5GsEGOdPOehKgHG-XYsgl-ERGE-1ZIz5kxPbrGiV8JLWoN4PMnSbHyAEJhYGV8b8OgqKoHvPwr-b4Uq8Y1kVv0GN-6iumTeBQXVbouAvLcUqN6Y1aGGXAnjUMMIT34yMtXj" alt="Physics Icon">
             <h3>Physics</h3>
             <p>भौतिकी</p>
         </div>
