--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
             <p>भौतिकी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('chemistry.html')">
-            <img src="https://via.placeholder.com/60" alt="Chemistry Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEjKpAFylTUY4MRHgqvBU6wU0llvkVGqtwcRKj2v1EJVZ0ewH6S5iuiquoWjbmcz9LpLMTgweKDPVWIraQGOBHraxgDjSU7u2AdBYc_vuirSDtmM-7RjqNz86a_UtPLi2VRXFAA1RkwuAClEr6uo-_PPpNYEP82LhVZRk3WMoyoK_g6HMXm-epU--lAIh3rX" alt="Chemistry Icon">
             <h3>Chemistry</h3>
             <p>रसायन शास्त्र</p>
         </div>
         <div class="button-card" onclick="navigateToPage('biology.html')">
-            <img src="https://via.placeholder.com/60" alt="Biology Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEhs8qqhYmjqxdD2U8tJT7Z6KRlVYtYaEpOVlaZih3pIFPY_aE8cRr0ZrexsFG7sMJbSPXkgIIgD3_sYxTsGEtGApzaqQt0dBwAYpeaTB7wYZosed-Pc2BrsJ7JvYR6-BTRgwLW9oU03uL00tON4nmKdE3xyhWn3tuBJ0ncB2Firo4I67WLSRLID4euNfc5a" alt="Biology Icon">
             <h3>Biology</h3>
             <p>जीवविज्ञान</p>
         </div>
