--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <p>जीवविज्ञान</p>
         </div>
         <div class="button-card" onclick="navigateToPage('computer_science.html')">
-            <img src="https://via.placeholder.com/60" alt="Computer Science Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEhZDAhEqJPVUvArc6pkKHynboEHplED4gTWdeYsblcYERa_RgxGNDl93yLDB3NNlgoLL3f5D2vXjHg_QvHEA8X_ukiHu5c4M8JTlX_kEguWsE_166DYUM4iS2C7KYVUSZVEUmAsezLuadHaSCJyOWTmnojecH33ECUz8GZFaLuKR7ZuV84blxKvMjgQ748O" alt="Computer Science Icon">
             <h3>Computer Science</h3>
             <p>कंप्यूटर विज्ञान</p>
         </div>
         <div class="button-card" onclick="navigateToPage('english.html')">
-            <img src="https://via.placeholder.com/60" alt="English Icon">
+            <img src=" https://blogger.googleusercontent.com/img/a/AVvXsEicumRvmBetBft1w8W0Y67LwSLw_jgCySxcR6ysaYkms95UKvozWOnU66dGNhcGVJevJDR4zlQYtAnNN7jwwmEQREC2TC47Q0It2vHVwHV5uG-OIPlprpmQkvDkeLTnqsrhJM9wUX1dSe4jlMZlUm3XFOewnqIzrZkmaLePdROkIy4TMX4fkwt0u3ZW9mwG" alt="English Icon">
             <h3>English</h3>
             <p>अंग्रेजी</p>
         </div>
