--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
             <p>अंग्रेजी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('hindi.html')">
-            <img src="https://via.placeholder.com/60" alt="Hindi Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEheCmzLCE-kB1-makN3sssuUv8fJgT_iUb6G_m6bil5vCu0axmed0A1-fGwYa0_jYDEPDES05k4m9wXDiNH58v2jJ3zj4kmdvj1uYRNaT5sFJ9ulR6JBFHP77hxX-1e6H0vrw1kzuhb-0zksS8495v1OlJ3pm4QeY3nXuGz4DL5qPAswXJPI0DxhLrr8kz6" alt="Hindi Icon">
             <h3>Hindi</h3>
             <p>हिंदी</p>
         </div>
         <div class="button-card" onclick="navigateToPage('general_knowledge.html')">
-            <img src="https://via.placeholder.com/60" alt="General Knowledge Icon">
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEilPJnzC4sgWPzmujiJiQ3YAkUcmXxsZXBidFzPvCDuORpCBULSNZugJ91VmNtmtrGIVuLSVAYClioDXaCrJaIx2nIzN5lOrmuR6Bf1ibXW9e-sFN6PXd7P0QkFx8q9DpEO0VXNsrSYMFH0M3jabPOxreYi72JNLTVH_BipJQkL7DrQwsCcoiVXDTDP50Mk" alt="General Knowledge Icon">
             <h3>General Knowledge</h3>
             <p>सामान्य ज्ञान</p>
         </div>
         <div class="button-card" onclick="navigateToPage('reasoning.html')">
-            <img src="https://via.placeholder.com/60" alt="Reasoning Icon">
-            <h3>Reasoning</h3>
-            <p>तर्कशक्ति</p>
+            <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEjn722KdIrA2Ny0g25kgGk1NYpnK8qcQDBs4NdoaopHdzzyk8mgmAET_arHCTpUVTy8lqKBOfAFvCSjXn8y7QRdX7X4pvJwt-BmUwMHx2T3reNlIQo4-Ct0-gnZZkNPQry9KN8fEbGAut4RWkG6LW-1QHRegJhOyQPqfwNIN1ABFKzQ-8U7A134UVmYen1F" alt="Reasoning Icon">
+            <h3>Exam Preparation</h3>
+            <p>परीक्षा की तैयारियां</p>
         </div>
     </div>
 </body>
