--- a/com/tophic1.html
+++ b/com/tophic1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IAS परीक्षा के मुख्य विषय</title>
+    <title>IAS परीक्षा के लिए कंप्यूटर विज्ञान के मुख्य विषय</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,68 +22,58 @@
     </style>
 </head>
 <body>
-    <h1>IAS परीक्षा के मुख्य विषय</h1>
+    <h1>IAS परीक्षा में कंप्यूटर विज्ञान के मुख्य विषय</h1>
     <p>
-        IAS (भारतीय प्रशासनिक सेवा) मुख्य परीक्षा में विविध और गहन विषय पूछे जाते हैं। इस परीक्षा में सामान्य अध्ययन, निबंध लेखन, वैकल्पिक विषय और भाषाओं से संबंधित पेपर शामिल होते हैं। नीचे IAS मुख्य परीक्षा के प्रमुख विषय दिए गए हैं:
+        यदि आप IAS मुख्य परीक्षा में कंप्यूटर विज्ञान को वैकल्पिक विषय (Optional Subject) के रूप में चुनते हैं, तो आपको निम्नलिखित प्रमुख विषयों का अध्ययन करना होगा:
     </p>
-    <h2>1. निबंध (Essay)</h2>
-    <p>
-        विभिन्न सामाजिक, राजनीतिक, आर्थिक, और सांस्कृतिक मुद्दों पर निबंध लिखने की आवश्यकता होती है।
-        <br>
-        <strong>उदाहरण:</strong>
-        <ul>
-            <li>जलवायु परिवर्तन और सतत विकास</li>
-            <li>लोकतंत्र में मीडिया की भूमिका</li>
-            <li>वैश्वीकरण का प्रभाव</li>
-        </ul>
-    </p>
-    <h2>2. सामान्य अध्ययन (General Studies)</h2>
-    <h3>पेपर I: भारतीय विरासत और संस्कृति, इतिहास और भूगोल</h3>
+    <h2>1. डेटा संरचना और एल्गोरिदम (Data Structures and Algorithms)</h2>
     <ul>
-        <li>भारतीय संस्कृति: कला, साहित्य, और वास्तुकला का इतिहास।</li>
-        <li>आधुनिक भारतीय इतिहास: 18वीं सदी के बाद के प्रमुख घटनाक्रम।</li>
-        <li>स्वतंत्रता संग्राम: विभिन्न चरण और योगदान।</li>
-        <li>विश्व इतिहास: औद्योगिक क्रांति, विश्व युद्ध, उपनिवेशवाद, आदि।</li>
-        <li>भौगोलिक विशेषताएँ: भारत और विश्व का भूगोल।</li>
+        <li>डेटा संरचनाएँ: एरे (Array), लिंक्स्ड लिस्ट (Linked List), स्टैक (Stack), क्यू (Queue), ग्राफ (Graph), और ट्री (Tree)।</li>
+        <li>एल्गोरिदम: सॉर्टिंग और सर्चिंग एल्गोरिदम, ग्राफ एल्गोरिदम (DFS, BFS), और डायनैमिक प्रोग्रामिंग।</li>
     </ul>
-    <h3>पेपर II: शासन, संविधान, राजनीति, और सामाजिक न्याय</h3>
+    <h2>2. कंप्यूटर संगठन और आर्किटेक्चर (Computer Organization and Architecture)</h2>
     <ul>
-        <li>भारतीय संविधान: संरचना, विशेषताएँ, संशोधन।</li>
-        <li>शासन: ई-गवर्नेंस, पारदर्शिता, और लोकपाल।</li>
-        <li>अंतरराष्ट्रीय संबंध: भारत के पड़ोसी देशों के साथ संबंध।</li>
-        <li>सामाजिक न्याय: सरकारी योजनाएँ, महिलाओं और कमजोर वर्गों के लिए नीतियाँ।</li>
+        <li>प्रोसेसर आर्किटेक्चर: CPU, मेमोरी, और कैश।</li>
+        <li>इंस्ट्रक्शन सेट आर्किटेक्चर।</li>
+        <li>पाइपलाइनिंग, थ्रेड्स, और मल्टीप्रोसेसिंग।</li>
+        <li>इनपुट/आउटपुट सिस्टम।</li>
     </ul>
-    <h3>पेपर III: प्रौद्योगिकी, आर्थिक विकास, जैव विविधता, और पर्यावरण</h3>
+    <h2>3. ऑपरेटिंग सिस्टम (Operating System)</h2>
     <ul>
-        <li>भारतीय अर्थव्यवस्था: विकास, संसाधन जुटाना।</li>
-        <li>पर्यावरण संरक्षण: जैव विविधता, प्रदूषण।</li>
-        <li>विज्ञान और प्रौद्योगिकी: नए आविष्कार और उनकी सामाजिक प्रासंगिकता।</li>
-        <li>आपदा प्रबंधन: प्राकृतिक और मानव-निर्मित आपदाओं का प्रबंधन।</li>
+        <li>प्रोसेस मैनेजमेंट: प्रोसेस शेड्यूलिंग, थ्रेड्स।</li>
+        <li>डेडलॉक्स (Deadlocks)।</li>
+        <li>मेमोरी मैनेजमेंट: पेजिंग, सेगमेंटेशन।</li>
+        <li>फाइल सिस्टम।</li>
     </ul>
-    <h3>पेपर IV: नैतिकता, अखंडता, और योग्यता</h3>
+    <h2>4. डेटाबेस मैनेजमेंट सिस्टम (DBMS)</h2>
     <ul>
-        <li>नैतिकता और मानवीय मूल्य।</li>
-        <li>सार्वजनिक जीवन में ईमानदारी और कार्य संस्कृति।</li>
-        <li>केस स्टडी: विभिन्न नैतिक दुविधाओं को हल करना।</li>
+        <li>रिलेशनल डेटाबेस मॉडल।</li>
+        <li>SQL और क्वेरी ऑप्टिमाइजेशन।</li>
+        <li>नॉर्मलाइजेशन और डीनॉर्मलाइजेशन।</li>
+        <li>ट्रांजैक्शन मैनेजमेंट और ACID प्रॉपर्टी।</li>
     </ul>
-    <h2>3. वैकल्पिक विषय (Optional Subjects)</h2>
-    <p>
-        वैकल्पिक विषयों की एक लंबी सूची होती है। कुछ प्रमुख विषय हैं:
-        <ul>
-            <li>इतिहास</li>
-            <li>भूगोल</li>
-            <li>समाजशास्त्र</li>
-            <li>राजनीति विज्ञान और अंतरराष्ट्रीय संबंध</li>
-            <li>अर्थशास्त्र</li>
-            <li>लोक प्रशासन</li>
-            <li>मनोविज्ञान</li>
-            <li>साहित्य (हिंदी, अंग्रेजी, या अन्य क्षेत्रीय भाषाएँ)</li>
-            <li>दर्शनशास्त्र</li>
-        </ul>
-    </p>
+    <h2>5. कंप्यूटर नेटवर्क्स (Computer Networks)</h2>
+    <ul>
+        <li>OSI और TCP/IP मॉडल।</li>
+        <li>नेटवर्किंग प्रोटोकॉल: HTTP, FTP, SMTP।</li>
+        <li>IP एड्रेसिंग और सबनेटिंग।</li>
+        <li>डेटा ट्रांसमिशन: लैन (LAN), वैन (WAN), और वाई-फाई।</li>
+    </ul>
+    <h2>6. सॉफ्टवेयर इंजीनियरिंग (Software Engineering)</h2>
+    <ul>
+        <li>सॉफ्टवेयर विकास जीवन चक्र (SDLC)।</li>
+        <li>एगाइल और वाटरफॉल मॉडल।</li>
+        <li>सॉफ़्टवेयर परीक्षण और गुणवत्ता आश्वासन।</li>
+    </ul>
+    <h2>7. आर्टिफिशियल इंटेलिजेंस (Artificial Intelligence)</h2>
+    <ul>
+        <li>मशीन लर्निंग के मूल सिद्धांत।</li>
+        <li>डीप लर्निंग और न्यूरल नेटवर्क।</li>
+        <li>एप्लिकेशन: नेचुरल लैंग्वेज प्रोसेसिंग और कंप्यूटर विज़न।</li>
+    </ul>
     <h2>निष्कर्ष</h2>
     <p>
-        IAS मुख्य परीक्षा के विषय गहन अध्ययन और तैयारी की मांग करते हैं। सही रणनीति, समय प्रबंधन, और गहन अभ्यास से सफलता पाई जा सकती है। इन विषयों पर ध्यान केंद्रित करके उम्मीदवार अपनी तैयारी को सशक्त बना सकते हैं।
+        कंप्यूटर विज्ञान IAS के लिए एक चुनौतीपूर्ण लेकिन स्कोरिंग विषय है। इन विषयों पर गहन अध्ययन और नियमित अभ्यास करके आप अपनी तैयारी को मजबूत कर सकते हैं।
     </p>
 </body>
 </html>
