--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h3>Hindi</h3>
             <p>हिंदी</p>
         </div>
-        <div class="button-card" onclick="navigateToPage('knowledge.html')">
+        <div class="button-card" onclick="navigateToPage('Knowledge.html')">
             <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEilPJnzC4sgWPzmujiJiQ3YAkUcmXxsZXBidFzPvCDuORpCBULSNZugJ91VmNtmtrGIVuLSVAYClioDXaCrJaIx2nIzN5lOrmuR6Bf1ibXW9e-sFN6PXd7P0QkFx8q9DpEO0VXNsrSYMFH0M3jabPOxreYi72JNLTVH_BipJQkL7DrQwsCcoiVXDTDP50Mk" alt="General Knowledge Icon">
             <h3>General Knowledge</h3>
             <p>सामान्य ज्ञान</p>
