--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h3>General Knowledge</h3>
             <p>सामान्य ज्ञान</p>
         </div>
-        <div class="button-card" onclick="navigateToPage('reasoning.html')">
+        <div class="button-card" onclick="navigateToPage('Exam.html')">
             <img src="  https://blogger.googleusercontent.com/img/a/AVvXsEjn722KdIrA2Ny0g25kgGk1NYpnK8qcQDBs4NdoaopHdzzyk8mgmAET_arHCTpUVTy8lqKBOfAFvCSjXn8y7QRdX7X4pvJwt-BmUwMHx2T3reNlIQo4-Ct0-gnZZkNPQry9KN8fEbGAut4RWkG6LW-1QHRegJhOyQPqfwNIN1ABFKzQ-8U7A134UVmYen1F" alt="Reasoning Icon">
             <h3>Exam Preparation</h3>
             <p>परीक्षा की तैयारियां</p>
