--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h3>Exam Preparation</h3>
             <p>परीक्षा की तैयारियां</p>
         </div>
-        <div class="button-card" onclick="navigateToPage('current_affairs.html')">
+        <div class="button-card" onclick="navigateToPage('current.html')">
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjVNxbyeVvueLYMS1le4KBhnyx1itkNqpOJEGMQoNfeHmHXv2YS13DekIyro2pcdzOrRVdiDXUJUsuQ0do1zGWcRVTa4OVtIbGww5_emhLyt0_Y3w1wWZmF47qM3XVjlw-X6_ppbJoH83mT6UhIRSRYk5_XKVQQ_4ARMyg8QvdCvbOuytzDYxbDADIXB8_V " alt="Current Affairs Icon">
             <h3>Current Affairs</h3>
             <p>समसामयिकी</p>
