--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h3>Logic</h3>
             <p>तर्क शक्ति</p>
         </div>
-        <div class="button-card" onclick="navigateToPage('political.html')">
+        <div class="button-card" onclick="navigateToPage('Political.html')">
             <img src=" https://blogger.googleusercontent.com/img/a/AVvXsEgHIpPeABy-bTBNzeStlYLkg5BFZnaw4An_CGl2iU2xf86z_n16ZrLdmI0nxM2a8445pedpRustyxy6smBXNYq0r1N_jOV6QjpzsoEv7FXd3ZP_7_1VdEznRTa81ZB5BTor_74h4--1MXghEsiBGGXFYNqHmWckXpZKF2Um1aWpnpzjUD9bte_I-EAZFFCL" alt="Political Icon">
             <h3>Political And Constitution</h3>
             <p>राजनीति ओर संविधान</p>
