--- a/samanya.html
+++ b/samanya.html
@@ -65,6 +65,6 @@
         <button class="button" id="nextButton" onclick="changePage(1)">अगला</button>
     </div>
 
-    <script src="gen.js"></script>
+    <script src="samanya.js"></script>
 </body>
 </html>
