--- a/geo.html
+++ b/geo.html
@@ -118,7 +118,7 @@
         <h2>Explore Topics with Elegance</h2>
         <ul class="category-list">
             <li class="category">
-                <a href="physical-geography.html"><button>Physical Geography</button></a>
+                <a href="  Gen/samanya.html"><button>Physical Geography</button></a>
             </li>
             <li class="category">
                 <a href="human-geography.html"><button>Human Geography</button></a>
