--- a/Knowledge.html
+++ b/Knowledge.html
@@ -47,7 +47,7 @@
     <div class="container">
         <h1>Select a Topic</h1>
         <div class="categories">
-            <a href=".html" class="category">सामान्य ज्ञान</a>
+            <a href="/Gen/samanya.html" class="category">सामान्य ज्ञान</a>
             <a href=".html" class="category">Political</a>
             <a href=".html" class="category">संविधान</a>
         </div>
