--- a/Gen/political.html
+++ b/Gen/political.html
@@ -65,6 +65,6 @@
         <button class="button" id="nextButton" onclick="changePage(1)">अगला</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="political.js"></script>
 </body>
 </html>
