--- a/Knowledge.html
+++ b/Knowledge.html
@@ -48,7 +48,7 @@
         <h1>Select a Topic</h1>
         <div class="categories">
             <a href="/Gen/samanya.html" class="category">सामान्य ज्ञान</a>
-            <a href=".html" class="category">Political</a>
+            <a href="  /Gen/political.html" class="category">Political</a>
             <a href=".html" class="category">संविधान</a>
         </div>
     </div>
