--- a/Exam.html
+++ b/Exam.html
@@ -65,7 +65,7 @@
     <div class="container">
         <h1>अध्ययन के टॉपिक्स</h1>
         <div class="categories">
-            <a href="math-preparation.html" class="category">गणित तैयारी</a>
+            <a href="exam/ganit_teyari.html" class="category">गणित तैयारी</a>
             <a href="logical-reasoning.html" class="category">तार्किक क्षमता</a>
             <a href="general-knowledge.html" class="category">सामान्य ज्ञान</a>
             <a href="current-affairs.html" class="category">करंट अफेयर्स</a>
