--- a/Exam.html
+++ b/Exam.html
@@ -66,7 +66,7 @@
         <h1>अध्ययन के टॉपिक्स</h1>
         <div class="categories">
             <a href="exam/ganit_teyari.html" class="category">गणित तैयारी</a>
-            <a href="logical-reasoning.html" class="category">तार्किक क्षमता</a>
+            <a href="exam/tarkik.html" class="category">तार्किक क्षमता</a>
             <a href="general-knowledge.html" class="category">सामान्य ज्ञान</a>
             <a href="current-affairs.html" class="category">करंट अफेयर्स</a>
             <a href="english-language.html" class="category">अंग्रेज़ी भाषा</a>
