--- a/Exam.html
+++ b/Exam.html
@@ -68,7 +68,7 @@
             <a href="exam/ganit_teyari.html" class="category">गणित तैयारी</a>
             <a href="exam/tarkik.html" class="category">तार्किक क्षमता</a>
             <a href="exam/samanya_gyan.html" class="category">सामान्य ज्ञान</a>
-            <a href="current-affairs.html" class="category">करंट अफेयर्स</a>
+            <a href="exam/current-affairs.html" class="category">करंट अफेयर्स</a>
             <a href="english-language.html" class="category">अंग्रेज़ी भाषा</a>
             <a href="indian-polity.html" class="category">भारतीय राजव्यवस्था</a>
             <a href="indian-history.html" class="category">भारतीय इतिहास</a>
