--- a/Exam.html
+++ b/Exam.html
@@ -70,21 +70,21 @@
             <a href="exam/samanya_gyan.html" class="category">सामान्य ज्ञान</a>
             <a href="exam/current-affairs.html" class="category">करंट अफेयर्स</a>
             <a href="exam/english-language.html" class="category">अंग्रेज़ी भाषा</a>
-            <a href="indian-polity.html" class="category">भारतीय राजव्यवस्था</a>
-            <a href="indian-history.html" class="category">भारतीय इतिहास</a>
-            <a href="geography.html" class="category">भूगोल</a>
-            <a href="science-tech.html" class="category">विज्ञान और प्रौद्योगिकी</a>
-            <a href="economics.html" class="category">अर्थशास्त्र</a>
-            <a href="environment-ecology.html" class="category">पर्यावरण और पारिस्थितिकी</a>
-            <a href="data-interpretation.html" class="category">डेटा व्याख्या</a>
-            <a href="essay-writing.html" class="category">निबंध लेखन</a>
-            <a href="interview-preparation.html" class="category">साक्षात्कार तैयारी</a>
-            <a href="time-management.html" class="category">समय प्रबंधन</a>
-            <a href="study-tips.html" class="category">अध्ययन के सुझाव</a>
-            <a href="question-bank.html" class="category">प्रश्न बैंक</a>
-            <a href="mock-tests.html" class="category">मॉक टेस्ट</a>
-            <a href="exam-strategy.html" class="category">परीक्षा की रणनीति</a>
-            <a href="revision-tips.html" class="category">पुनरावलोकन सुझाव</a>
+            <a href="exam/indian-polity.html" class="category">भारतीय राजव्यवस्था</a>
+            <a href="exam/indian-history.html" class="category">भारतीय इतिहास</a>
+            <a href="exam/geography.html" class="category">भूगोल</a>
+            <a href="exam/science-tech.html" class="category">विज्ञान और प्रौद्योगिकी</a>
+            <a href="exam/economics.html" class="category">अर्थशास्त्र</a>
+            <a href="exam/environment-ecology.html" class="category">पर्यावरण और पारिस्थितिकी</a>
+            <a href="exam/data-interpretation.html" class="category">डेटा व्याख्या</a>
+            <a href="exam/essay-writing.html" class="category">निबंध लेखन</a>
+            <a href="exam/interview-preparation.html" class="category">साक्षात्कार तैयारी</a>
+            <a href="exam/time-management.html" class="category">समय प्रबंधन</a>
+            <a href="exam/study-tips.html" class="category">अध्ययन के सुझाव</a>
+            <a href="exam/question-bank.html" class="category">प्रश्न बैंक</a>
+            <a href="exam/mock-tests.html" class="category">मॉक टेस्ट</a>
+            <a href="exam/exam-strategy.html" class="category">परीक्षा की रणनीति</a>
+            <a href="exam/revision-tips.html" class="category">पुनरावलोकन सुझाव</a>
         </div>
     </div>
     <footer>
