--- a/Current.html
+++ b/Current.html
@@ -90,11 +90,11 @@
         <h1>Current Affairs</h1>
         <p>यहाँ पर विभिन्न टॉपिक्स की सूची दी गई है। किसी भी टॉपिक पर क्लिक करें:</p>
         <ul>
-            <li><a href="national.html">राष्ट्रीय समाचार (National)</a></li>
-            <li><a href="international.html">अंतर्राष्ट्रीय समाचार (International)</a></li>
-            <li><a href="sports.html">खेल समाचार (Sports)</a></li>
-            <li><a href="technology.html">प्रौद्योगिकी (Technology)</a></li>
-            <li><a href="economy.html">आर्थिक समाचार (Economy)</a></li>
+            <li><a href="corrent_affairs/national.html">राष्ट्रीय समाचार (National)</a></li>
+            <li><a href="corrent_affairs/international.html">अंतर्राष्ट्रीय समाचार (International)</a></li>
+            <li><a href="corrent_affairs/sports.html">खेल समाचार (Sports)</a></li>
+            <li><a href="corrent_affairs/technology.html">प्रौद्योगिकी (Technology)</a></li>
+            <li><a href="corrent_affairs/economy.html">आर्थिक समाचार (Economy)</a></li>
         </ul>
     </div>
     <footer>
