--- a/Geography.html
+++ b/Geography.html
@@ -121,16 +121,16 @@
                 <a href="  Geography/Physical_Geography.html"><button>Physical Geography</button></a>
             </li>
             <li class="category">
-                <a href="human-geography.html"><button>Human Geography</button></a>
+                <a href=" Geography/human_geography.html"><button>Human Geography</button></a>
             </li>
             <li class="category">
-                <a href="economic-geography.html"><button>Economic Geography</button></a>
+                <a href=" Geography/economic-geography.html"><button>Economic Geography</button></a>
             </li>
             <li class="category">
-                <a href="climatology.html"><button>Climatology</button></a>
+                <a href=" Geography/climatology.html"><button>Climatology</button></a>
             </li>
             <li class="category">
-                <a href="environmental-geography.html"><button>Environmental Geography</button></a>
+                <a href=" Geography/environmental-geography.html"><button>Environmental Geography</button></a>
             </li>
         </ul>
     </div>
