--- a/logic.html
+++ b/logic.html
@@ -65,26 +65,26 @@
     <div class="container">
         <h1>तर्क शक्ति के टॉपिक्स</h1>
         <div class="categories">
-            <a href="analogies.html" class="category">समानता और विषमता</a>
-            <a href="series-completion.html" class="category">क्रमबद्धता</a>
-            <a href="syllogisms.html" class="category">तर्क का वर्णन</a>
-            <a href="coding-decoding.html" class="category">कोडिंग और डिकोडिंग</a>
-            <a href="direction-distance.html" class="category">दिशा और दूरी</a>
-            <a href="blood-relations.html" class="category">रक्त संबंध</a>
-            <a href="order-ranking.html" class="category">घटनाओं का क्रम</a>
-            <a href="clock-calendar.html" class="category">घड़ी और कैलेंडर</a>
-            <a href="number-series.html" class="category">संख्या श्रृंखला</a>
-            <a href="alphabet-series.html" class="category">अक्षर श्रृंखला</a>
-            <a href="grouping-classification.html" class="category">समूह और वर्गीकरण</a>
-            <a href="figure-completion.html" class="category">आकृतियों की पहचान</a>
-            <a href="equation-reasoning.html" class="category">समीकरण आधारित तर्क</a>
-            <a href="puzzles.html" class="category">पजल्स और पहेलियां</a>
-            <a href="input-output.html" class="category">इनपुट-आउटपुट तर्क</a>
-            <a href="statement-assumptions.html" class="category">सत्यता की जाँच</a>
-            <a href="cause-effect.html" class="category">कारण और प्रभाव</a>
-            <a href="facts-conclusions.html" class="category">तथ्य, अनुमान और निष्कर्ष</a>
-            <a href="data-interpretation.html" class="category">डेटा व्याख्या</a>
-            <a href="venn-diagrams.html" class="category">वेन आरेख</a>
+            <a href="logic/analogies.html" class="category">समानता और विषमता</a>
+            <a href="logic/series-completion.html" class="category">क्रमबद्धता</a>
+            <a href="logic/syllogisms.html" class="category">तर्क का वर्णन</a>
+            <a href="logic/coding-decoding.html" class="category">कोडिंग और डिकोडिंग</a>
+            <a href="logic/direction-distance.html" class="category">दिशा और दूरी</a>
+            <a href="logic/blood-relations.html" class="category">रक्त संबंध</a>
+            <a href="logic/order-ranking.html" class="category">घटनाओं का क्रम</a>
+            <a href="logic/clock-calendar.html" class="category">घड़ी और कैलेंडर</a>
+            <a href="logic/number-series.html" class="category">संख्या श्रृंखला</a>
+            <a href="logic/alphabet-series.html" class="category">अक्षर श्रृंखला</a>
+            <a href="logic/grouping-classification.html" class="category">समूह और वर्गीकरण</a>
+            <a href="logic/figure-completion.html" class="category">आकृतियों की पहचान</a>
+            <a href="logic/equation-reasoning.html" class="category">समीकरण आधारित तर्क</a>
+            <a href="logic/puzzles.html" class="category">पजल्स और पहेलियां</a>
+            <a href="logic/input-output.html" class="category">इनपुट-आउटपुट तर्क</a>
+            <a href="logic/statement-assumptions.html" class="category">सत्यता की जाँच</a>
+            <a href="logic/cause-effect.html" class="category">कारण और प्रभाव</a>
+            <a href="logic/facts-conclusions.html" class="category">तथ्य, अनुमान और निष्कर्ष</a>
+            <a href="logic/data-interpretation.html" class="category">डेटा व्याख्या</a>
+            <a href="logic/venn-diagrams.html" class="category">वेन आरेख</a>
         </div>
     </div>
     <footer>
