--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
         }
         .button-card:hover {
             background-color: #f0f0f0;
+            body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f9f9f9;
+      text-align: center;
+      padding-top: 50px;
+    }
         }
     </style>
     <script>
@@ -132,6 +138,10 @@
             <p>हिंदी</p>
         </div>
         
+   <a href="privacy.html" class="button">Privacy Policy</a>
+  <a href="about.html" class="button">About Us</a>
+
+ 
     </div>
 </body>
 </html>
