--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         
    <a href="privacy.html" class="button">Privacy Policy</a>
-  <a href="about.html" class="button">About Us</a>
+  <a href="About.html" class="button">About Us</a>
 
  
     </div>
