--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>वायरल परीक्षाएं</title>
+    <title>Provide Mind</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,7 +65,7 @@
     </script>
 </head>
 <body>
-    <div class="navbar">। वायरल परीक्षाएं</div>
+    <div class="navbar">Provide Mind </div>
     <div class="container">
         <div class="button-card" onclick="navigateToPage('quiz.html')">
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEgDT1ksOkN2Za9icRZ1GYGsqo-pgE52wwZiGDpe6jkAPsmvBM46jgtoGbwwIwiGIdaRrk_1fvTP0WPB67EoH4qWdsZxYAF4Xsvd7mhYsiNTyDhplyAhryqZBAImP6YtavBuHy-ZVWajACjveVUgwEOx-F1UeABw1vN5KWYR0ayF2zpb72pQgX4HmYX8W8Ew" alt="Quiz Icon">
