--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         
    <a href="privacy.html" class="button">Privacy Policy</a>
   <a href="About.html" class="button">About Us</a>
+ <a href="Terms.html" class="button">terms and conditions</a>
 
  
     </div>
